Fix email button on mobile

--- a/app/(home)/Page.module.css
+++ b/app/(home)/Page.module.css
@@ -29,7 +29,7 @@
 	width: 100%;
 	background: var(--color-980);
 	border-radius: var(--base);
-    padding: 1rem;
+    padding: 1.5rem 3rem;
 }
 
 @media (max-width: 1400px) {
