--- a/app/Konan/Page.module.css
+++ b/app/Konan/Page.module.css
@@ -25,7 +25,7 @@
 .context span {
 	display: inline-block;
 	text-transform: uppercase;
-	font-size: .75rem;
+	font-size: 1rem;
 	font-weight: 700;
 	letter-spacing: 0.04rem;
 	padding: 6px 10px 4px;
@@ -40,7 +40,7 @@
 		#b8b8b8 100%
 	);
 	background-size: 400% 100%;
-	animation: slowShimmer 120s linear infinite;
+	animation: slowShimmer 240s linear infinite;
 	position: relative;
 	overflow: hidden;
 	box-shadow: 
@@ -63,7 +63,7 @@
 		rgba(255, 255, 255, 0) 100%
 	);
 	transform: rotate(30deg);
-	animation: slowRotate 10s linear infinite;
+	animation: slowRotate 30s linear infinite;
 }
 
 @keyframes slowShimmer {
