--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,12 @@ html{
 	font-size: 14px;
 }
 
+@media (max-width: 768px) {
+	html {
+		font-size: 12px;
+	}
+}
+
 *{
 	box-sizing: border-box;
 	font-family: var(--font-inter), sans-serif;
@@ -31,10 +37,15 @@ body{
 	background: var(--color-1000);
 	color: var(--color-00);
 }
+article{
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
 section{
 	display: flex;
 	flex-direction: column;
-	max-width: 60rem;
+	max-width: 72rem;
 	margin: 0 auto;
 	padding: 2rem;
 	width: 100%;
@@ -77,11 +88,11 @@ ul,ol{
 	font-size: 1.25rem;
 	line-height: 2.5rem;
 	font-weight: 400;
-	list-style-position: inside;
-	padding: 0;
+	list-style-position: outside;
+	padding-left: 3rem;
 }
 ul{
-	list-style-type: "•  ";
+	list-style-type: disc;
 }
 ol{
 	list-style-type: decimal;
@@ -96,6 +107,7 @@ li{
 }
 a{
 	color: var(--color-500);
+	font-size: 1.25rem;
 	font-weight: 700;
 	text-decoration: none;
 }
