--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -7,15 +7,18 @@
     justify-content: space-between;
     gap: 1rem;
 }
-.poster li{
+.poster div{
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
     line-height: 1.75rem;
 }
-.poster li:first-of-type{
+.poster div div{
     display: flex;
-    align-items: flex-start;
-    gap: 0.5rem;
+    flex-direction: column;
+    gap: 0rem;
+    justify-content:space-around;
 }
-
 .avatar{
     border-radius: 50%;
     border: 2px solid var(--color-1000);
@@ -23,8 +26,8 @@
     height: 48px !important;
 }
 .logo{
-    font-size: clamp(3rem, 13vw, 8.5rem);
-    line-height: clamp(3rem, 13vw, 8rem);
+    font-size: clamp(3rem, 13.75vw, 10.5rem);
+    line-height: clamp(3rem, 13.75vw, 10rem);
     font-weight: 900;
     text-wrap: nowrap;
     color: var(--color-100);
